# rumpelpod

./: .env.example  .gitignore  .sandbox.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESCRIPTION  Dockerfile  GUIDE.md  LICENCE  NOTICE  README.md  THIRD-PARTY-NOTICES  build.rs  install.sh  pipeline  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  k8s-registry-port-forward.service  provision-k3d.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_tests/: agent.rs  agent_grok.rs  copy.rs  enter.rs  enter_branch_tracking.rs  sync.rs
ci/: run-pipeline.sh
default-image/: Dockerfile
docs/: claude-testing.md  devcontainer.md
docs/devcontainer/: environment.md  image_and_build.md  lifecycle_commands.md  mounts.md  port_forwarding.md  runtime.md  user_management.md  variable_substitution.md  workspace.md
llm-cache/: README.md
rumpelpod/: Cargo.toml  build.rs
rumpelpod/src/: async_runtime.rs  claude.rs  cli.rs  codex.rs  command_ext.rs  completions.rs  config.rs  container_exec.rs  cp.rs  daemon.rs  delete.rs  devcontainer.rs  enter.rs  exec_proxy.rs  fork.rs  gateway.rs  git.rs  git_http_server.rs  grok.rs  hook.rs  image.rs  image_cmd.rs  k8s.rs  lib.rs  list.rs  main.rs  merge.rs  pi.rs  pod.rs  port_file.rs  ports.rs  prepared_image.rs  prune.rs  pty_attach.rs  pty_session.rs  recreate.rs  registry.rs  review.rs  service.rs  slow_guard.rs  (+5 more)
rumpelpod/src/daemon/: db.rs  host_connection.rs  pod_connection.rs  protocol.rs  reconnect.rs
rumpelpod/src/executor/: engine.rs  mod.rs  podman_ssh.rs  spec.rs
rumpelpod/src/hub/: image.rs  install.rs  manifests.rs  mod.rs  serve.rs
rumpelpod/src/llm/: cache_proxy.rs  mod.rs
rumpelpod/src/pod/: client.rs  codex.rs  git_setup.rs  lifecycle.rs  pty.rs  server.rs  types.rs
rumpelpod/tests/: attribution.rs  cli.rs
rumpelpod/tests/cli/: common.rs  completions.rs  container_name.rs  cp.rs  delete.rs  description_hook.rs  enter.rs  env_probe_hang.rs  executor.rs  fork.rs  list.rs  merge.rs  network.rs  podman.rs  prune.rs  recreate.rs  review.rs  setup_progress.rs  ssh_agent.rs  stop.rs  systemd.rs  version.rs
rumpelpod/tests/cli/claude/: common.rs  detach.rs  fork.rs  host_session.rs  install.rs  mod.rs  reauth.rs  smoke.rs  system_prompt.rs  tool_use.rs
rumpelpod/tests/cli/codex/: common.rs  detach.rs  host_network.rs  install.rs  lifecycle.rs  mod.rs  session_isolation.rs  smoke.rs  system_prompt.rs  workdir.rs
rumpelpod/tests/cli/devcontainer/: env.rs  image.rs  lifecycle_commands.rs  malformed_checkout.rs  mod.rs  mounts.rs  ports.rs  remote_env.rs  runtime_options.rs  unsupported.rs  variables.rs  workspace.rs
rumpelpod/tests/cli/gateway/: mod.rs  submodules.rs
rumpelpod/tests/cli/grok/: common.rs  mod.rs  smoke.rs
rumpelpod/tests/cli/k8s/: hub.rs  mod.rs
rumpelpod/tests/cli/pi/: common.rs  install.rs  mod.rs  smoke.rs  system_prompt.rs  tool_use.rs
rumpelpod/tests/cli/ssh/: mod.rs
src/: agent.rs  anthropic.rs  async.rs  async_runtime.rs  claude.rs  cli.rs  codex.rs  command_ext.rs  config.rs  container_serve.rs  cp.rs  daemon.rs  daemon_protocol.rs  delete.rs  devcontainer.rs  docker.rs  docker_exec.rs  enter.rs  exec_proxy.rs  gateway.rs  git.rs  git_http.rs  git_http_server.rs  hook.rs  image.rs  image_cmd.rs  k8s.rs  k8s_build.rs  lib.rs  list.rs  llm_cache.rs  main.rs  merge.rs  overlay.rs  pod.rs  pod_client.rs  ports.rs  prepared_image.rs  prune.rs  pty_attach.rs  (+12 more)
src/agent/: anthropic.rs  common.rs  gemini.rs  history.rs  mod.rs  xai.rs
src/daemon/: db.rs  protocol.rs  reconnect.rs  ssh_forward.rs
src/llm/: cache.rs  cache_proxy.rs  error.rs  mod.rs
src/llm/client/: anthropic.rs  gemini.rs  mod.rs  vertex_auth.rs  xai.rs
src/llm/types/: anthropic.rs  gemini.rs  mod.rs  xai.rs
src/pod/: client.rs  codex.rs  pty.rs  server.rs  types.rs
tests/: Dockerfile-debian  agent.rs  cli.rs  copy.rs  create.rs  delete.rs  dir.rs  enter.rs  git_http.rs  integration.rs  list.rs  sync.rs
tests/cli/: agent.rs  anthropic_url.rs  common.rs  container_name.rs  cp.rs  delete.rs  enter.rs  executor.rs  gateway.rs  image.rs  list.rs  merge.rs  network.rs  prune.rs  recreate.rs  review.rs  ssh_agent.rs  stop.rs  systemd.rs  version.rs
tests/cli/agent/: anthropic.rs  bash_tool.rs  common.rs  file_tools.rs  gemini.rs  history.rs  mod.rs  smoke.rs  startup.rs  temp_file_path.rs  web_tools.rs  xai.rs
tests/cli/claude/: common.rs  detach.rs  install.rs  mod.rs  proxy.rs  reauth.rs  skip_permissions.rs  smoke.rs  system_prompt.rs  tool_use.rs
tests/cli/codex/: common.rs  mod.rs  smoke.rs  system_prompt.rs
tests/cli/devcontainer/: env.rs  image.rs  lifecycle_commands.rs  malformed_checkout.rs  mod.rs  mounts.rs  ports.rs  remote_env.rs  runtime_options.rs  unsupported.rs  variables.rs  workspace.rs
tests/cli/gateway/: mod.rs  submodules.rs
tests/cli/k8s/: mod.rs
tests/cli/ssh/: mod.rs
tests/common/: mod.rs
tools/: Cargo.toml  deprovision-aks  deprovision-eks  deprovision-hetzner-k3s  hetzner-k3s-config.yaml  k8s-builder.yaml  k8s-registry.yaml  provision-aks  provision-eks  provision-hetzner-k3s  provision-mac-scaleway  release
tools/attribution/: about.hbs  about.toml
tools/src/: lib.rs
