[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandbox"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
anyhow = "*"
thiserror = "*"
toml = "*"
log = "*"
env_logger = "*"
clap = { version = "*", features = ["derive"] }
sha2 = "*"
hex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
json5 = "*"
notify = "*"
tokio = { version = "*", features = ["full"] }
dirs = "*"
nix = { version = "*", features = ["user", "fs"] }
chrono = { version = "*", features = ["serde"] }
libc = "*"
reflink-copy = "*"
git2 = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = ["blocking", "json", "rustls-tls"] }
jsonwebtoken = { version = "*", features = ["rust_crypto"] }
base64 = "*"
indoc = "*"
strum = { version = "*", features = ["derive"] }
backoff = "*"
retry = "*"
rand = "*"
tempfile = "*"
listenfd = "*"
url = "*"
axum = "*"
hyper = { version = "*", features = ["server", "http1"] }
hyper-util = { version = "*", features = ["tokio"] }
tower = { version = "*", features = ["util"] }
cgi-service = "*"
rusqlite = { version = "*", features = ["bundled", "chrono"] }
socket2 = "*"
tower-service = ">=0"
bollard = "*"
tokio-stream = ">=0"

[dev-dependencies]
assert_cmd = "*"
portable-pty = "*"
walkdir = "*"
