# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rumpelpod"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "rumpelpod"
path = "src/lib.rs"

[[bin]]
name = "rumpel"
path = "src/main.rs"

[dependencies]
anyhow = ">= 0"
thiserror = ">= 0"
log = ">= 0"
env_logger = ">= 0"
clap = { version = ">= 0", features = ["derive"] }
clap_complete = { version = ">= 0", features = ["unstable-dynamic"] }
sha2 = ">= 0"
hex = ">= 0"
serde = { version = ">= 0", features = ["derive"] }
serde_json = { version = ">= 0", features = ["preserve_order"] }
json5 = ">= 0"
notify = ">= 0"
tokio = { version = ">= 0", features = ["full"] }
dirs = ">= 0"
nix = { version = ">= 0", features = ["user", "fs", "process", "signal", "term", "ioctl"] }
chrono = { version = ">= 0", features = ["serde"] }
libc = ">= 0"
reflink-copy = ">= 0"
git2 = { version = ">= 0", default-features = false }
reqwest = { version = ">= 0", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }
base64 = ">= 0"
indoc = ">= 0"
strum = { version = ">= 0", features = ["derive"] }
backoff = ">= 0"
ctrlc = { version = ">= 0", features = ["termination"] }
retry = ">= 0"
rand = ">= 0"
tempfile = ">= 0"
listenfd = ">= 0"
url = ">= 0"
axum = { version = ">= 0", features = ["ws"] }
tokio-tungstenite = ">= 0"
hyper = { version = ">= 0", features = ["server", "http1"] }
hyper-util = { version = ">= 0", features = ["tokio"] }
tower = { version = ">= 0", features = ["util"] }
cgi-service = ">= 0"
rusqlite = { version = ">= 0", features = ["bundled", "chrono"] }
socket2 = ">= 0"
tower-service = ">= 0"
futures-core = ">= 0"
futures-util = ">= 0"
tokio-stream = ">= 0"
tokio-util = { version = ">= 0", features = ["io", "io-util"] }
comfy-table = ">= 0"
vt100 = ">= 0"
kube = { version = ">= 0", features = ["client", "ws", "rustls-tls"] }
k8s-openapi = { version = ">= 0", features = ["latest"] }
tar = ">= 0"
flate2 = ">= 0"
walkdir = ">= 0"
tower-http = { version = ">= 0", features = ["compression-gzip", "decompression-gzip"] }

[build-dependencies]
sha2 = ">= 0"
hex = ">= 0"

[dev-dependencies]
assert_cmd = ">= 0"
portable-pty = ">= 0"
vt100 = ">= 0"
