# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tools"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "tools"
path = "src/lib.rs"

[[bin]]
name = "xtest"
path = "src/bin/xtest.rs"
test = false

[[bin]]
name = "pipeline"
path = "src/bin/pipeline.rs"
test = false

[[bin]]
name = "release"
path = "src/bin/release.rs"
test = false

[[bin]]
name = "eks"
path = "src/bin/eks.rs"
test = false

[[bin]]
name = "provision-hetzner-k3s"
path = "src/bin/provision_hetzner_k3s.rs"
test = false

[[bin]]
name = "provision-hetzner-dev"
path = "src/bin/provision_hetzner_dev.rs"
test = false

[[bin]]
name = "provision-mac-scaleway"
path = "src/bin/provision_mac_scaleway.rs"
test = false

[dependencies]
anyhow = ">= 0"
log = ">= 0"
clap = { version = ">= 0", features = ["derive"] }
nix = { version = ">= 0", features = ["signal", "process"] }
chrono = ">= 0"
indoc = ">= 0"
base64 = ">= 0"
serde = { version = ">= 0", features = ["derive"] }
serde_json = ">= 0"
json5 = ">= 0"
tempfile = ">= 0"
libc = ">= 0"
ctrlc = { version = ">= 0", features = ["termination"] }
dirs = ">= 0"
